--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,11 @@
 			<artifactId>lucene-analyzers-common</artifactId>
 			<version>8.10.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.medallia.word2vec</groupId>
+			<artifactId>Word2VecJava</artifactId>
+			<version>0.10.3</version>
+		</dependency>
 	</dependencies>
 
 	<build>
